codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__successful_write_renders_diff_without_tool_noise.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: history
---
• Added foo.txt (+1 -0)
    1 +hello
