codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_empty_then_non_empty_after.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: normalize_snapshot_paths(rendered)
---
• Bash task proc-2 running · 0s
  └ just fix
    ls

• Working (0s • esc to interrupt) · 1 backgroun…


› Ask Astral-Code to do anything

  deepseek-v4-pro default · /tmp/project
