codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_non_empty_then_empty_active.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: normalize_snapshot_paths(active_rendered)
---
• Bash task proc-3 running · 0s
  └ just fix
    pwd

• Working (0s • esc to interrupt) · 1 backgroun…


› Ask Astral-Code to do anything

  deepseek-v4-pro default · /tmp/project
