codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_non_empty_then_empty_after.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: combined
---
• Bash task proc-3 running · 0s
  └ just fix
    pwd

────────────────────────────────────────────────────────────────────────────────
