codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_unknown_end_with_active_exploring_cell.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: snapshot
---
History:
• Exploring
  └ Read null

Active:
✓ Bash task proc-1 completed in 0s
  └ echo repro-marker
    repro-marker
