codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_wait_status_renders_command_in_single_details_row.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: normalize_snapshot_paths(rendered)
---
• Bash task proc-ui running · 0s
  └ cargo test -p codex-core -- --exact
some::very::long::test::name

• Working (0s • esc to interrupt) · 1 backgroun…


› Ask Astral-Code to do anything

  deepseek-v4-pro default · /tmp/project
